--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
                     <div class="section-divider"></div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6" data-aos="fade-right">
+            <div class="row justify-content-center">
+                <div class="col-md-8" data-aos="fade-up">
                     <div class="contact-info">
                         <div class="contact-item">
                             <div class="contact-icon">
@@ -326,25 +326,6 @@
                                 <p><a href="https://github.com/Shasikumar10" target="_blank">github.com/Shasikumar10</a></p>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-6" data-aos="fade-left">
-                    <div class="contact-form">
-                        <form>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" placeholder="Your Name" required>
-                            </div>
-                            <div class="mb-3">
-                                <input type="email" class="form-control" placeholder="Your Email" required>
-                            </div>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" placeholder="Subject" required>
-                            </div>
-                            <div class="mb-3">
-                                <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Send Message</button>
-                        </form>
                     </div>
                 </div>
             </div>
